added homework problem, rearranged imgs, added mergesort

--- a/Session 1.ipynb
+++ b/Session 1.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Linked List Example](ll_ex.png)"
+    "![Linked List Example](imgs/ll_ex.png)"
    ]
   },
   {
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Stack Example](stack_ex.jpg)"
+    "![Stack Example](imgs/stack_ex.jpg)"
    ]
   },
   {
@@ -221,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Queue Example](queue_ex.png)"
+    "![Queue Example](imgs/queue_ex.png)"
    ]
   },
   {
@@ -306,6 +306,86 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Unicorn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-6429a2510716>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdict_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m\"a\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"b\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdict_test\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Unicorn\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 'Unicorn'"
+     ]
+    }
+   ],
+   "source": [
+    "dict_test = {\"a\":2,\"b\":3}\n",
+    "dict_test[\"Unicorn\"] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vanilla\n",
+      "defaultdict(<class 'list'>, {'Texas': ['Dallas']})\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "ice_cream = defaultdict(lambda: 'Vanilla')\n",
+    "print(ice_cream[\"Kevin\"])\n",
+    "\n",
+    "\n",
+    "# cities_by_state = defaultdict(lambda: [])\n",
+    "cities_by_state = defaultdict(list)\n",
+    "cities_by_state[\"Texas\"].append(\"Dallas\")\n",
+    "print(cities_by_state)\n",
+    "\n",
+    "# food_count = defaultdict(lambda: 0)\n",
+    "food_count = defaultdict(int)\n",
+    "print(food_count[\"Bread\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'a': 2, 'b': 1})\n",
+      "Counter({'a': 2, 'b': 1, 'Unicorn': 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "# Counter with initial values\n",
+    "counter = Counter(['a', 'a', 'b'])\n",
+    "print(counter)\n",
+    "\n",
+    "# setting count for non-existing key, adds to Counter\n",
+    "counter['Unicorn'] += 1\n",
+    "print(counter)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -356,7 +436,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Fibonacci Example](fib_ex.png)"
+    "![Fibonacci Example](imgs/fib_ex.png)"
    ]
   },
   {
@@ -411,6 +491,100 @@
     "- QuickSort\n",
     "  - Avg Time Complexity: `O(nlog(n))`\n",
     "  - Utilizes pivots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MergeSort\n",
+    "\n",
+    "MergeSort(arr[ ], l,  r)\n",
+    "If r > l\n",
+    "     1. Find the middle point to divide the array into two halves:  \n",
+    "             middle m = (l+r)/2\n",
+    "     2. Call mergeSort for first half:   \n",
+    "             Call mergeSort(arr, l, m)\n",
+    "     3. Call mergeSort for second half:\n",
+    "             Call mergeSort(arr, m+1, r)\n",
+    "     4. Merge the two halves sorted in step 2 and 3:\n",
+    "             Call merge(arr, l, m, r)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Merge Sort](imgs/mergesort_ex.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Given array is\n",
+      "38 27 43 3 9 82 10 \n",
+      "[27] [43]\n",
+      "[38] [27, 43]\n",
+      "[3] [9]\n",
+      "[82] [10]\n",
+      "[3, 9] [10, 82]\n",
+      "[27, 38, 43] [3, 9, 10, 82]\n",
+      "Sorted array is: \n",
+      "3 9 10 27 38 43 82 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python program for implementation of MergeSort \n",
+    "def mergeSort(arr): \n",
+    "    if len(arr) >1: \n",
+    "        mid = len(arr)//2 #Finding the mid of the array \n",
+    "        L = arr[:mid] # Dividing the array elements  \n",
+    "        R = arr[mid:] # into 2 halves \n",
+    "\n",
+    "        mergeSort(L) # Sorting the first half \n",
+    "        mergeSort(R) # Sorting the second half \n",
+    "        print(L,R)\n",
+    "        i = j = k = 0\n",
+    "\n",
+    "        while i < len(L) and j < len(R): \n",
+    "            if L[i] < R[j]: \n",
+    "                arr[k] = L[i] \n",
+    "                i+=1\n",
+    "            else: \n",
+    "                arr[k] = R[j] \n",
+    "                j+=1\n",
+    "            k+=1\n",
+    "\n",
+    "        # Checking if any element was left \n",
+    "        while i < len(L): \n",
+    "            arr[k] = L[i] \n",
+    "            i+=1\n",
+    "            k+=1\n",
+    "\n",
+    "        while j < len(R): \n",
+    "            arr[k] = R[j] \n",
+    "            j+=1\n",
+    "            k+=1\n",
+    "  \n",
+    "# Code to print the list \n",
+    "def printList(arr): \n",
+    "    for i in range(len(arr)):         \n",
+    "        print(arr[i],end=\" \") \n",
+    "    print() \n",
+    "  \n",
+    "arr = [38, 27, 43, 3, 9, 82, 10]  \n",
+    "print (\"Given array is\", end=\"\\n\")  \n",
+    "printList(arr) \n",
+    "mergeSort(arr) \n",
+    "print(\"Sorted array is: \", end=\"\\n\") \n",
+    "printList(arr) "
    ]
   },
   {
@@ -519,7 +693,12 @@
     "1. You will be asked an open-ended question. Ask clarifying questions, devise requirements.\n",
     "2. You will be asked to explain it in an algorithm.\n",
     "3. Convert it to a workable code. Hint: Don't worry about getting it perfect because time is limited. Write what comes but then refine it later. Also make sure you consider corner cases and edge cases, production ready.\n",
-    "4. Optimize the code, follow it with test cases and find any bugs."
+    "4. Optimize the code, follow it with test cases and find any bugs.\n",
+    "\n",
+    "### Videos\n",
+    "- [How to Prepare](https://www.youtube.com/embed/ko-KkSmp-Lk)\n",
+    "- [Example of Coding Interview](https://www.youtube.com/embed/XKu_SEDAykw)\n",
+    "- [Candidate Coaching Session](https://www.youtube.com/embed/oWbUtlUhwa8)"
    ]
   },
   {
@@ -659,6 +838,123 @@
     "\n",
     "lst = [4,3,8,1,2,9,2,5,2]\n",
     "find_most_frequent(lst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problem: Insert and Delete\n",
+    "Add funcionality to the insert and delete methods of the object LinkedList. When you insert an element into a linked list, you insert it into the back. When deleting, the method will be given a value to search for, and it will handle both deleting and connecting nodes in place of the deleted node."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node():\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "        self.next = None\n",
+    "\n",
+    "\n",
+    "class LinkedList():\n",
+    "    def __init__(self, head):\n",
+    "        self.head = head\n",
+    "        \n",
+    "    def insert(self, node):\n",
+    "        pass\n",
+    "    \n",
+    "    def delete(self, value):\n",
+    "        pass\n",
+    "        \n",
+    "    def printlist(self):\n",
+    "        current_node = self.head\n",
+    "        while current_node:\n",
+    "            print(current_node.value)\n",
+    "            current_node = current_node.next\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "ll = LinkedList(Node(5))\n",
+    "# ll.insert(Node(2))\n",
+    "# ll.insert(Node(10))\n",
+    "# ll.delete(2)\n",
+    "ll.printlist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problem: Two Sum\n",
+    "[LeetCode Link](https://leetcode.com/problems/two-sum/)\n",
+    "\n",
+    "Given an array of integers, return indices of the two numbers such that they add up to a specific target.\n",
+    "\n",
+    "You may assume that each input would have exactly one solution, and you may not use the same element twice.\n",
+    "\n",
+    "Example:\n",
+    "```\n",
+    "Given nums = [2, 7, 11, 15], target = 9,\n",
+    "\n",
+    "Because nums[0] + nums[1] = 2 + 7 = 9,\n",
+    "return [0, 1].\n",
+    "```\n",
+    "\n",
+    "Hints:\n",
+    "- Start with brute force.\n",
+    "- Simply iterate through\n",
+    "- the enumerate function may be useful\n",
+    "- a dictionary will be useful"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i: 0 and value: Joe\n",
+      "i: 1 and value: Bob\n",
+      "i: 2 and value: Laura\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, value in enumerate([\"Joe\",\"Bob\",\"Laura\"]):\n",
+    "    print(\"i: {} and value: {}\".format(i,value))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def twoSum(self, nums, target):\n",
+    "    pass\n",
+    "\n",
+    "twoSum([2,7,11,15],9)"
    ]
   },
   {
