updated readme with set up, added session 3 and 4 with ml and flask

--- a/Session 4.ipynb
+++ b/Session 4.ipynb
@@ -4,8 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Flask App on Heroku](https://towardsdatascience.com/productionize-a-machine-learning-model-with-flask-and-heroku-8201260503d2)\n",
-    "\n",
+    "# Covered Topics\n",
+    "- Machine Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[Displaying Accuracy](https://towardsdatascience.com/a-beginners-guide-to-linear-regression-in-python-with-scikit-learn-83a8f7ae2b4f)"
    ]
   },
