--- a/Session 2.ipynb
+++ b/Session 2.ipynb
@@ -135,20 +135,20 @@
      "output_type": "stream",
      "text": [
       "4   4\n",
-      "4   4\n",
-      "4   4\n",
-      "4   4\n",
+      "4   5\n",
+      "4   6\n",
+      "4   8\n",
+      "5   4\n",
       "5   5\n",
-      "5   5\n",
-      "5   5\n",
-      "5   5\n",
+      "5   6\n",
+      "5   8\n",
+      "6   4\n",
+      "6   5\n",
       "6   6\n",
-      "6   6\n",
-      "6   6\n",
-      "6   6\n",
-      "8   8\n",
-      "8   8\n",
-      "8   8\n",
+      "6   8\n",
+      "8   4\n",
+      "8   5\n",
+      "8   6\n",
       "8   8\n"
      ]
     }
@@ -159,7 +159,7 @@
     "def quadratic_algo(items):\n",
     "    for item in items:\n",
     "        for item2 in items:\n",
-    "            print(item, ' ' ,item)\n",
+    "            print(item, ' ' ,item2)\n",
     "\n",
     "quadratic_algo([4, 5, 6, 8])"
    ]
@@ -893,7 +893,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
