--- a/Session 4.ipynb
+++ b/Session 4.ipynb
@@ -1071,10 +1071,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error: 3.2046406044501916\n",
-      "Mean Squared Error: 19.900383436035703\n",
-      "Root Mean Squared Error: 4.460984581461329\n",
-      "R^2: 0.7572861543744532\n"
+      "Mean Absolute Error: 3.4584402888845527\n",
+      "Mean Squared Error: 21.199075191484084\n",
+      "Root Mean Squared Error: 4.604245344405974\n",
+      "R^2: 0.7508788069548735\n"
      ]
     }
    ],
@@ -1117,55 +1117,55 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>CRIM</th>\n",
-       "      <td>-0.079568</td>\n",
+       "      <td>-0.117263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ZN</th>\n",
-       "      <td>0.050271</td>\n",
+       "      <td>0.052823</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>INDUS</th>\n",
-       "      <td>0.007265</td>\n",
+       "      <td>0.027355</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CHAS</th>\n",
-       "      <td>2.175583</td>\n",
+       "      <td>2.914892</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>NOX</th>\n",
-       "      <td>-20.119306</td>\n",
+       "      <td>-16.532906</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RM</th>\n",
-       "      <td>3.207934</td>\n",
+       "      <td>3.613250</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AGE</th>\n",
-       "      <td>0.004555</td>\n",
+       "      <td>-0.004996</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DIS</th>\n",
-       "      <td>-1.749910</td>\n",
+       "      <td>-1.552619</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RAD</th>\n",
-       "      <td>0.327653</td>\n",
+       "      <td>0.366545</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>TAX</th>\n",
-       "      <td>-0.014269</td>\n",
+       "      <td>-0.015397</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PTRATIO</th>\n",
-       "      <td>-0.914755</td>\n",
+       "      <td>-0.839212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
-       "      <td>0.008835</td>\n",
+       "      <td>0.005642</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LSTAT</th>\n",
-       "      <td>-0.553834</td>\n",
+       "      <td>-0.570804</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1173,19 +1173,19 @@
       ],
       "text/plain": [
        "         Coefficient\n",
-       "CRIM       -0.079568\n",
-       "ZN          0.050271\n",
-       "INDUS       0.007265\n",
-       "CHAS        2.175583\n",
-       "NOX       -20.119306\n",
-       "RM          3.207934\n",
-       "AGE         0.004555\n",
-       "DIS        -1.749910\n",
-       "RAD         0.327653\n",
-       "TAX        -0.014269\n",
-       "PTRATIO    -0.914755\n",
-       "B           0.008835\n",
-       "LSTAT      -0.553834"
+       "CRIM       -0.117263\n",
+       "ZN          0.052823\n",
+       "INDUS       0.027355\n",
+       "CHAS        2.914892\n",
+       "NOX       -16.532906\n",
+       "RM          3.613250\n",
+       "AGE        -0.004996\n",
+       "DIS        -1.552619\n",
+       "RAD         0.366545\n",
+       "TAX        -0.015397\n",
+       "PTRATIO    -0.839212\n",
+       "B           0.005642\n",
+       "LSTAT      -0.570804"
       ]
      },
      "execution_count": 20,
@@ -1941,7 +1941,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://raw.githubusercontent.com/kevinlwebb/TwitterAggressionProject/master/data/tweet_train.csv\"\n",
+    "url = \"data/tweet_train.csv\"\n",
     "df = pd.read_csv(url)"
    ]
   },
@@ -2228,9 +2228,9 @@
      "text": [
       "Labels: [0 1]\n",
       "Confusion Matrix:\n",
-      " [[5916   29]\n",
-      " [ 192  256]]\n",
-      "Accuracy: 0.9654309400907243\n"
+      " [[5924   31]\n",
+      " [ 183  255]]\n",
+      "Accuracy: 0.9665258876896605\n"
      ]
     }
    ],
@@ -2275,6 +2275,14 @@
     "[XGBoost](https://xgboost.readthedocs.io/en/latest/) is a the leading software library for working with standard tabular data (the type of data you store in Pandas DataFrames, as opposed to more exotic types of data like images and videos). With careful parameter tuning, you can train highly accurate models.\n",
     "\n",
     "**XGBoost** stands for extreme gradient boosting, which is an implementation of gradient boosting with several additional features focused on performance and speed. (Scikit-learn has another version of gradient boosting, but XGBoost has some technical advantages.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [TensorFlow](https://www.tensorflow.org/)\n",
+    "TensorFlow is more of a low-level library; basically, we can think of TensorFlow as the Lego bricks (similar to NumPy and SciPy) that we can use to implement machine learning algorithms whereas scikit-learn comes with off-the-shelf algorithms, e.g., algorithms for classification such as SVMs, Random Forests, Logistic Regression, and many, many more. TensorFlow really shines if we want to implement deep learning algorithms, since it allows us to take advantage of GPUs for more efficient training. Comparison [link](https://sebastianraschka.com/faq/docs/tensorflow-vs-scikitlearn.html)"
    ]
   }
  ],
