corrected project example 2, update heroku instructions, added additional steps to ml

--- a/Session 6.ipynb
+++ b/Session 6.ipynb
@@ -461,6 +461,12 @@
     "# Remove rows with missing target\n",
     "df.dropna(axis=0, subset=['SalePrice'], inplace=True)\n",
     "\n",
+    "# Reset index\n",
+    "df.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "# Replace (possible) None types with np.NaN\n",
+    "df.fillna(value=pd.np.nan, inplace=True)\n",
+    "\n",
     "# Separate target from predictors\n",
     "y = df.SalePrice         \n",
     "X = df.drop(['SalePrice'], axis=1)\n",
@@ -473,11 +479,11 @@
     "\n",
     "# \"Cardinality\" means the number of unique values in a column\n",
     "# Select categorical columns with relatively low cardinality (convenient but arbitrary)\n",
-    "categorical_cols = [cname for cname in X_train_full.columns if X_train_full[cname].nunique() < 10 and \n",
+    "categorical_cols = [str(cname) for cname in X_train_full.columns if X_train_full[cname].nunique() < 10 and \n",
     "                        X_train_full[cname].dtype == \"object\"]\n",
     "\n",
     "# Select numeric columns\n",
-    "numerical_cols = [cname for cname in X_train_full.columns if X_train_full[cname].dtype in ['int64', 'float64']]\n",
+    "numerical_cols = [str(cname) for cname in X_train_full.columns if X_train_full[cname].dtype in ['int64', 'float64']]\n",
     "\n",
     "# Keep selected columns only\n",
     "my_cols = categorical_cols + numerical_cols\n",
@@ -911,8 +917,10 @@
     "```\n",
     "The next step is to install the heroku command line tools:\n",
     "```\n",
-    "curl https://cli-assets.heroku.com/install-ubuntu.sh | sh\n",
-    "https://devcenter.heroku.com/articles/heroku-cli#standalone-installation\n",
+    "curl https://cli-assets.heroku.com/install.sh | sh\n",
+    "```\n",
+    "The above command is not Windows compatible. Check the link for the Windows installation: https://devcenter.heroku.com/articles/heroku-cli#standalone-installation\n",
+    "```\n",
     "heroku —-version\n",
     "```\n",
     "And then log into heroku with the following command (assuming you have an account)\n",
@@ -964,6 +972,13 @@
     "```\n",
     "Now, you can type your web app's address in the browser to see the results."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
