--- a/Session 7.ipynb
+++ b/Session 7.ipynb
@@ -974,7 +974,7 @@
     "```\n",
     "Now, you can type your web app's address in the browser to see the results.\n",
     "\n",
-    "### From \n",
+    "### From GitHub\n",
     "1. [Create a new repository](https://help.github.com/en/articles/creating-a-new-repository) on GitHub. To avoid errors, do not initialize the new repository with README, license, or `gitignore` files. You can add these files after your project has been pushed to GitHub.\n",
     "\n",
     "2. Open Terminal.\n",
